examples/bad/unknown_type_2.ez
f : Integer -> Integer;
f x = (lambda{MyType -> Integer} t -> 2)  x;

main : Integer;
main = f 1;
